--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -1,137 +1,142 @@
-<div class="card mb-3">
-    <div class="card-body">
-        <form class="mb-3">
-            <div *ngIf="!new">
-                <input class="form-check-input me-2 mt-2" (click)="toggleButton()" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label mb-4 mt-2" for="flexRadioDefault1">
-                  Existing Client
-                </label>
-            </div>
-
-            <!-- ROW 1 -->
-            <div class="row mb-4">
-                <div class="col-4" *ngIf="!new">
-                    <label for="minmax-buttons" class="required" id="quote-label">Name</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">                            
-                </div>
-                <div class="col-4" *ngIf="new">
-                    <label for="minmax-buttons" class="required" id="quote-label">Client</label>
-                    <input type="text" id="quote-input"  class="form-control form-control-sm mb-1" data-bs-toggle="modal" data-bs-target="#clientModal" formControlName="">                            
-                </div>
-                <div class="col-4 ">
-                    <label for="minmax-buttons" id="quote-label">Email Address</label>
-                    <input type="number" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">     
-                </div>
-                <div class="col-4">
-                    <label for="minmax-buttons" id="quote-label">Phone Number</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">     
-                </div>
-            </div>
-             <!-- ROW 2 -->
-             <div class="row mb-4">
-                <div class="col-4">
-                    <label for="minmax-buttons" id="quote-label">Source</label>
-                    <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
-                        <option value=""></option>
-                        <option *ngFor="let source of sourceDetail" [value]="source.code">{{ source.description }}</option>
-
-                    </select>              
-                </div>
-                <div class="col-4">
-                    <label for="minmax-buttons" id="quote-label">Product</label>
-                    <select class="form-select form-control-sm mb-1 ms-n4" id="product-dropdown" formControlName="" (change)="onProductSelected($event)">
-                        <option value=""></option>
-                        <option *ngFor="let product of productList" [value]="product.code">{{ product.description }}</option>
-                    </select>   
-                </div>
-                <div class="col-4">
-                    <label for="minmax-buttons" id="quote-label">Use of property</label>
-                    <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
-                        <option ></option>
-                        <option ></option>
-                    </select>    
-                </div>
-            </div>
-             <!-- ROW 3 -->
-             <div class="row">
-                <div class="col-4">
-                    <label for="minmax-buttons" id="quote-label">Binder</label>
-                    <select class="form-select form-control-sm mb-1 ms-n4" id="binder-dropdown" formControlName="">
-                        <option value=""></option>
-                        <option *ngFor="let binder of selectedBinderList" [value]="binder.code">{{ binder.binder_short_description }}</option>
-                    </select>                
-                </div>
-                <div class="col-4">
-                    <label for="minmax-buttons" id="quote-label">Cover Period</label>
-                    <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">     
-                </div>
-                <div class="col-4">
-                    <label for="minmax-buttons" class="required" id="quote-label">Currency</label>
-                    <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
-                        <option value=""></option>
-                        <option *ngFor="let currency of currencyList" [value]="currency.id">{{ currency.symbol }}</option>
-                    </select>                 
-                </div>
-            </div>
-            
-             <!-- ROW 4 -->
-            <div *ngIf="formData && selectedProductCode" class="row">
-                <div class="col-12">
-                    <h4>Product-Specific Form Fields</h4>
-                    <div class="row">
+<div class="container">
+    <p class="titleMain mt-3">Quotations: Quotation Data Entry</p>
+    <app-stepper [currentStep]="1" [stepperData]="steps"></app-stepper>
+    <div class="container mx-2 mt-n1">
+        <div class="card mb-3">
+            <div class="card-body">
+                <form class="mb-3">
+                    <div *ngIf="!new">
+                        <input class="form-check-input me-2 mt-2" (click)="toggleButton()" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <label class="form-check-label mb-4 mt-2" for="flexRadioDefault1">
+                          Existing Client
+                        </label>
+                    </div>
+        
+                    <!-- ROW 1 -->
+                    <div class="row mb-4">
+                        <div class="col-4" *ngIf="!new">
+                            <label for="minmax-buttons" class="required" id="quote-label">Name</label>
+                            <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">                            
+                        </div>
+                        <div class="col-4" *ngIf="new">
+                            <label for="minmax-buttons" class="required" id="quote-label">Client</label>
+                            <input type="text" id="quote-input"  class="form-control form-control-sm mb-1" data-bs-toggle="modal" data-bs-target="#clientModal" formControlName="">                            
+                        </div>
+                        <div class="col-4 ">
+                            <label for="minmax-buttons" id="quote-label">Email Address</label>
+                            <input type="number" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">     
+                        </div>
                         <div class="col-4">
-                            <form [formGroup]="dynamicForm">
-                                <div *ngFor="let field of formData">
-                                    <label id="quote-label" [for]="field.name">{{ field.label }}</label>
-                                    <input [type]="field.type" [formControlName]="field.name" id="quote-input" class="form-control form-control-sm mb-1">
-                                </div>
-                            </form>
+                            <label for="minmax-buttons" id="quote-label">Phone Number</label>
+                            <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">     
+                        </div>
+                    </div>
+                     <!-- ROW 2 -->
+                     <div class="row mb-4">
+                        <div class="col-4">
+                            <label for="minmax-buttons" id="quote-label">Source</label>
+                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
+                                <option value=""></option>
+                                <option *ngFor="let source of sourceDetail" [value]="source.code">{{ source.description }}</option>
+                            </select>              
+                        </div>
+                        <div class="col-4">
+                            <label for="minmax-buttons" id="quote-label">Product</label>
+                            <select class="form-select form-control-sm mb-1 ms-n4" id="product-dropdown" formControlName="" (change)="onProductSelected($event)">
+                                <option value=""></option>
+                                <option *ngFor="let product of productList" [value]="product.code">{{ product.description }}</option>
+                            </select>   
+                        </div>
+                        <div class="col-4">
+                            <label for="minmax-buttons" id="quote-label">Use of property</label>
+                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
+                                <option ></option>
+                                <option ></option>
+                            </select>    
+                        </div>
+                    </div>
+                     <!-- ROW 3 -->
+                     <div class="row">
+                        <div class="col-4">
+                            <label for="minmax-buttons" id="quote-label">Binder</label>
+                            <select class="form-select form-control-sm mb-1 ms-n4" id="binder-dropdown" formControlName="">
+                                <option value=""></option>
+                                <option *ngFor="let binder of selectedBinderList" [value]="binder.code">{{ binder.binder_short_description }}</option>
+                            </select>                
+                        </div>
+                        <div class="col-4">
+                            <label for="minmax-buttons" id="quote-label">Cover Period</label>
+                            <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">     
+                        </div>
+                        <div class="col-4">
+                            <label for="minmax-buttons" class="required" id="quote-label">Currency</label>
+                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
+                                <option value=""></option>
+                                <option *ngFor="let currency of currencyList" [value]="currency.id">{{ currency.symbol }}</option>
+                            </select>                 
                         </div>
                     </div>
                     
-                </div>
-            </div>
-            
-            <!-- Client Modal -->
-                <div class="modal fade" id="clientModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                        
-                        <div class="modal-body">
-                            <button type="button" class="float-end btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            <p class="text-start mb-3 text-primary">Select Client</p>
-                           
-                                <div class="row mb-3" id="quote-label">
-                                    <div class="col-xl-4">Select</div>
-                                    <div class="col-xl-4">ID</div>
-                                    <div class="col-xl-4">Name</div>
+                     <!-- ROW 4 -->
+                    <div *ngIf="formData && selectedProductCode" class="row">
+                        <div class="col-12">
+                            <h4>Product-Specific Form Fields</h4>
+                            <div class="row">
+                                <div class="col-4">
+                                    <form [formGroup]="dynamicForm">
+                                        <div *ngFor="let field of formData">
+                                            <label id="quote-label" [for]="field.name">{{ field.label }}</label>
+                                            <input [type]="field.type" [formControlName]="field.name" id="quote-input" class="form-control form-control-sm mb-1">
+                                        </div>
+                                    </form>
                                 </div>
-                                <div *ngFor="let data of clientData" class="mb-3">
-                                    <div class="row">
-                                    <div class="col-xl-4">
-                                        <input class="form-check-input me-2 mt-2" (click)="loadClientDetails(data.id)" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                                    </div>  
-                                   <div class="col-xl-4 "><p id="clientDetails">{{data.id}}</p></div>
-                                   <div class="col-xl-4"><p id="clientDetails">{{data.firstName+" "+data.lastName}}</p></div>
-                                    
-                                    </div>
-                                    
-                                </div>
-                                <div></div>
-                                <button class="btn btn-primary float-end" data-bs-dismiss="modal">Save Details</button>
+                            </div>
+                            
                         </div>
-                       
                     </div>
-                    </div>
-                </div>
-
-        </form>
-
-    </div>
-</div>
-<div class="row ">
-    <div class="col-6"></div>
-    <div class="col-6 d-flex justify-content-end"><button type="button" class="btn btn-outline-primary"  id="compute" >Compute</button>
+                    
+                    <!-- Client Modal -->
+                        <div class="modal fade" id="clientModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                
+                                <div class="modal-body">
+                                    <button type="button" class="float-end btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    <p class="text-start mb-3 text-primary">Select Client</p>
+                                   
+                                        <div class="row mb-3" id="quote-label">
+                                            <div class="col-xl-4">Select</div>
+                                            <div class="col-xl-4">ID</div>
+                                            <div class="col-xl-4">Name</div>
+                                        </div>
+                                        <div *ngFor="let data of clientData" class="mb-3">
+                                            <div class="row">
+                                            <div class="col-xl-4">
+                                                <input class="form-check-input me-2 mt-2" (click)="loadClientDetails(data.id)" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                            </div>  
+                                           <div class="col-xl-4 "><p id="clientDetails">{{data.id}}</p></div>
+                                           <div class="col-xl-4"><p id="clientDetails">{{data.firstName+" "+data.lastName}}</p></div>
+                                            
+                                            </div>
+                                            
+                                        </div>
+                                        <div></div>
+                                        <button class="btn btn-primary float-end" data-bs-dismiss="modal">Save Details</button>
+                                </div>
+                               
+                            </div>
+                            </div>
+                        </div>
+        
+                </form>
+        
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-6"></div>
+            <div class="col-6 d-flex justify-content-end"><button type="button" class="btn btn-outline-primary"  id="compute" >Compute</button>
+            </div>
+        </div>
     </div>
 </div>
 <br>
