--- a/src/app/features/gis/components/quotation/components/quick-quote-details/quick-quote-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-details/quick-quote-details.component.html
@@ -1,4 +1,4 @@
-<div class="container ">
+<!-- <div class="container ">
     <p class="title mt-3">Quotations: Quotation Data Entry</p>
      <app-stepper [currentStep]="1" [stepperData]="steps"></app-stepper>
      <div class="container mx-2 mt-n1">     
@@ -7,4 +7,4 @@
 </div>
 
 
-
+ -->
