VQ-263 Ability to resize the generated charts

--- a/src/app/shared/components/dynamic-chart/dynamic-chart.component.html
+++ b/src/app/shared/components/dynamic-chart/dynamic-chart.component.html
@@ -7,7 +7,7 @@
     </p>
   </div>
   <p-chart
-    height="400"
+    [height]="'100%'"
     [type]="chartType"
     [data]="basicData"
     [options]="basicOptions"
