VQ-777: Modify login User Header Details

--- a/src/app/features/base/components/header/header.component.html
+++ b/src/app/features/base/components/header/header.component.html
@@ -19,9 +19,10 @@
         </div>
         <div class="dropdown profile">
           <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <span>
+            <span class="float-end">
               <img [src]="getUserImage()" class="rounded-circle" [alt]="user?.name?.substring(0, 1)+'W'">
               <!-- {{user?.name?.substring(0, 1)?.toUppercase() | uppercase}} -->
+              {{ user?.name }}
             </span>
           </button>
           <ul class="dropdown-menu">
