--- a/src/app/features/reports-v2/reports/reports.component.html
+++ b/src/app/features/reports-v2/reports/reports.component.html
@@ -1,9 +1,9 @@
 <div class="base-content-section dashboard">
     <div class="row">
         <div class="col-6 mb-3">
-            <div class="card">
+            <div class="card fixed-height-card">
                 <div class="card-header bg-transparent">
-                    <span class="float-start">Reports
+                    <span class="float-start mt-3 head-top">Reports
                         <i class="fa fa-chevron-right" aria-hidden="true"></i>
                     </span>
                 </div>
@@ -28,9 +28,9 @@
             </div>
         </div>
         <div class="col-6 mb-3">
-            <div class="card">
+            <div class="card fixed-height-card">
                 <div class="card-header bg-transparent">
-                    <span class="float-start">Dashboards
+                    <span class="float-start mt-3 head-top">Dashboards
                         <i class="fa fa-chevron-right" aria-hidden="true"></i>
                     </span>
                 </div>
@@ -54,9 +54,9 @@
             </div>
         </div>
         <div class="col-6 mb-3">
-            <div class="card">
+            <div class="card fixed-height-card">
                 <div class="card-header bg-transparent">
-                    <span class="float-start">A glance into reports</span>
+                    <span class="float-start mt-3 head-bottom">A glance into reports</span>
                 </div>
                 <div class="card-body">
                     <button type="button" class="btn-tab" [ngClass]="{'active': activeTab === 'myReports'}" (click)="myReports()">
@@ -101,18 +101,49 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-link position-absolute bottom-0 end-0 mb-2 me-2" (click)="viewReports()">
+                    <button type="button" class="btn btn-end btn-link position-absolute bottom-0 end-0 mb-2 me-2" (click)="viewReports()">
                         View All
                     </button>
                 </div>
             </div>
         </div>
         <div class="col-6 mb-3">
-            <div class="card">
+            <div class="card fixed-height-card">
                 <div class="card-header bg-transparent">
-                    <span class="float-start">A glance into dashboards</span>
+                    <span class="float-start mt-3 head-bottom">A glance into dashboards</span>
                 </div>
-                <div class="card-body"></div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card-header bg-transparent head-sm">Finance</div>
+                                <div class="card-body">
+                                    <img src="assets/images/finance.png" alt="dashboard-reports">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card-header bg-transparent head-sm">Operations</div>
+                                <div class="card-body">
+                                    <img src="assets/images/operations.png" alt="dashboard-reports">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card-header bg-transparent head-sm">Other</div>
+                                <div class="card-body">
+                                    <img src="assets/images/other.png" alt="dashboard-reports">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-end btn-link position-absolute bottom-0 end-0 mb-2 me-2" 
+                            (click)="viewReports()">
+                        View All
+                    </button>
+                </div>
             </div>
         </div>
     </div>
