--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
@@ -40,8 +40,46 @@
 
 <div  class="d-flex my-4 mx-4">
   <button class="btn btn-success" (click)="generateAuthorizeOtp()" style="margin-right: 1rem;">Authorize</button>
-  <button class="btn btn-primary" (click)="processReassignTask()" id="btn-reassign-task">Multiple Reassign</button>
+  <button class="btn btn-primary border-radius-none" (click)="processReassignTask()" id="btn-reassign-task">Reassign</button>
 </div>
+
+<div class="d-flex my-4 mx-4">
+  <form [formGroup]="sortingForm" style="background: none; display: contents">
+    <div class="row col-lg-6">
+      <div class="col-lg-3 col-sm-6">
+        <label>From</label><br>
+        <input type="date" class="form-control" formControlName="fromDate" (change)="sortTickets()">
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <label>To</label><br>
+        <input type="date" class="form-control" formControlName="toDate" (change)="sortTickets()">
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <label>Type</label><br>
+        <select class="form-control form-select" formControlName="ticketTypes" id="type" (change)="sortTickets()">
+          <option value="" disabled selected>Select option</option>
+          <option value="">All</option>
+          <option *ngFor="let ticketTypes of ticketTypesData" value="{{ ticketTypes.shortDescription }}">{{ ticketTypes.description }}
+          </option>
+        </select>
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <label>Module</label><br>
+        <!--          <select formControlName="ticketModules" id="module" [(ngModel)]="selectedModule" (change)="searchModule($event)">-->
+        <select class="form-control form-select" formControlName="ticketModules" id="module" (change)="sortTickets()">
+          <option value="" selected>Select option</option>
+          <option value="">All</option>
+          <option *ngFor="let ticketModule of ticketModules"
+                  [ngValue]="ticketModule.shortDescription"
+          >
+            {{ ticketModule.description }}
+          </option>
+        </select>
+      </div>
+    </div>
+  </form>
+</div>
+
 <div class="my-4 mx-4">
   <div class="card">
     <div class="card-body" style="position: relative;">
@@ -55,6 +93,7 @@
       [paginator]="true"
       [rows]="10"
       [totalRecords]="filteredTickets.length"
+               [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
     >
         <ng-template pTemplate="header">
           <tr>
